--- a/crime_forecast_eda.ipynb
+++ b/crime_forecast_eda.ipynb
@@ -1015,6 +1015,340 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>UniqueIdentifier</th>\n",
+       "      <th>occ_date</th>\n",
+       "      <th>case_type_pubtrans</th>\n",
+       "      <th>LocationCode</th>\n",
+       "      <th>municipality</th>\n",
+       "      <th>Special_grouping</th>\n",
+       "      <th>Shooting</th>\n",
+       "      <th>occ_id</th>\n",
+       "      <th>hate_crime</th>\n",
+       "      <th>case_status</th>\n",
+       "      <th>occ_type</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>621587.5600</td>\n",
+       "      <td>4.879784e+06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016_37_1</td>\n",
+       "      <td>2016/01/01 06:03:00+00</td>\n",
+       "      <td>Impaired Alcohol / Over 80 Mgs</td>\n",
+       "      <td>Outdoor</td>\n",
+       "      <td>Newmarket</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016_37</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Solved</td>\n",
+       "      <td>Impaired Operation</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>632681.3500</td>\n",
+       "      <td>4.853143e+06</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016_54_1</td>\n",
+       "      <td>2016/01/01 06:21:59+00</td>\n",
+       "      <td>Liquor - Intoxicated</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>Markham</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016_54</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Solved</td>\n",
+       "      <td>Provincial Offences</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>630898.4900</td>\n",
+       "      <td>4.907071e+06</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2016_229_1</td>\n",
+       "      <td>2016/01/01 06:14:59+00</td>\n",
+       "      <td>Theft Under $5000 - Vehicle</td>\n",
+       "      <td>Outdoor</td>\n",
+       "      <td>Georgina</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016_229</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Closed</td>\n",
+       "      <td>Theft of Motor Vehicle</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>616371.2500</td>\n",
+       "      <td>4.853863e+06</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2016_249_1</td>\n",
+       "      <td>2016/01/01 14:23:00+00</td>\n",
+       "      <td>Assault with a Weapon</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>Vaughan</td>\n",
+       "      <td>Violent Crime</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016_249</td>\n",
+       "      <td>Hate Crime</td>\n",
+       "      <td>Solved</td>\n",
+       "      <td>Assaults</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>616483.5600</td>\n",
+       "      <td>4.854983e+06</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2016_359_1</td>\n",
+       "      <td>2016/01/01 18:07:00+00</td>\n",
+       "      <td>Mischief To Property</td>\n",
+       "      <td>Residence</td>\n",
+       "      <td>Vaughan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016_359</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Closed</td>\n",
+       "      <td>Mischief</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176969</th>\n",
+       "      <td>621320.2900</td>\n",
+       "      <td>4.894033e+06</td>\n",
+       "      <td>459003</td>\n",
+       "      <td>2018_390282_1</td>\n",
+       "      <td>2018/11/20 18:45:00+00</td>\n",
+       "      <td>Identity Fraud</td>\n",
+       "      <td>Residence</td>\n",
+       "      <td>Georgina</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018_390282</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Closed</td>\n",
+       "      <td>Fraud</td>\n",
+       "      <td>2018-11-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176970</th>\n",
+       "      <td>621320.2900</td>\n",
+       "      <td>4.894033e+06</td>\n",
+       "      <td>459081</td>\n",
+       "      <td>2018_390277_1</td>\n",
+       "      <td>2018/11/20 18:45:00+00</td>\n",
+       "      <td>Identity Fraud</td>\n",
+       "      <td>Residence</td>\n",
+       "      <td>Georgina</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018_390277</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Closed</td>\n",
+       "      <td>Fraud</td>\n",
+       "      <td>2018-11-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176971</th>\n",
+       "      <td>621320.2900</td>\n",
+       "      <td>4.894033e+06</td>\n",
+       "      <td>459085</td>\n",
+       "      <td>2018_390283_1</td>\n",
+       "      <td>2018/11/20 18:45:00+00</td>\n",
+       "      <td>Identity Fraud</td>\n",
+       "      <td>Residence</td>\n",
+       "      <td>Georgina</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018_390283</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Closed</td>\n",
+       "      <td>Fraud</td>\n",
+       "      <td>2018-11-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176972</th>\n",
+       "      <td>639411.0774</td>\n",
+       "      <td>4.856295e+06</td>\n",
+       "      <td>459153</td>\n",
+       "      <td>2023_806432_1</td>\n",
+       "      <td>2020/01/22 21:40:00+00</td>\n",
+       "      <td>Identity Fraud</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>Markham</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023_806432</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>Fraud</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176973</th>\n",
+       "      <td>623815.1200</td>\n",
+       "      <td>4.860162e+06</td>\n",
+       "      <td>459201</td>\n",
+       "      <td>2023_204033_1</td>\n",
+       "      <td>2018/01/01 05:00:00+00</td>\n",
+       "      <td>Harassing / Indecent Communications</td>\n",
+       "      <td>Residence</td>\n",
+       "      <td>Richmond Hill</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023_204033</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>Other Persons Crime</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>176974 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  X             Y  OBJECTID UniqueIdentifier  \\\n",
+       "0       621587.5600  4.879784e+06         1        2016_37_1   \n",
+       "1       632681.3500  4.853143e+06         2        2016_54_1   \n",
+       "2       630898.4900  4.907071e+06         3       2016_229_1   \n",
+       "3       616371.2500  4.853863e+06         4       2016_249_1   \n",
+       "4       616483.5600  4.854983e+06         5       2016_359_1   \n",
+       "...             ...           ...       ...              ...   \n",
+       "176969  621320.2900  4.894033e+06    459003    2018_390282_1   \n",
+       "176970  621320.2900  4.894033e+06    459081    2018_390277_1   \n",
+       "176971  621320.2900  4.894033e+06    459085    2018_390283_1   \n",
+       "176972  639411.0774  4.856295e+06    459153    2023_806432_1   \n",
+       "176973  623815.1200  4.860162e+06    459201    2023_204033_1   \n",
+       "\n",
+       "                      occ_date                   case_type_pubtrans  \\\n",
+       "0       2016/01/01 06:03:00+00       Impaired Alcohol / Over 80 Mgs   \n",
+       "1       2016/01/01 06:21:59+00                 Liquor - Intoxicated   \n",
+       "2       2016/01/01 06:14:59+00          Theft Under $5000 - Vehicle   \n",
+       "3       2016/01/01 14:23:00+00                Assault with a Weapon   \n",
+       "4       2016/01/01 18:07:00+00                 Mischief To Property   \n",
+       "...                        ...                                  ...   \n",
+       "176969  2018/11/20 18:45:00+00                       Identity Fraud   \n",
+       "176970  2018/11/20 18:45:00+00                       Identity Fraud   \n",
+       "176971  2018/11/20 18:45:00+00                       Identity Fraud   \n",
+       "176972  2020/01/22 21:40:00+00                       Identity Fraud   \n",
+       "176973  2018/01/01 05:00:00+00  Harassing / Indecent Communications   \n",
+       "\n",
+       "       LocationCode   municipality Special_grouping Shooting       occ_id  \\\n",
+       "0           Outdoor      Newmarket              NaN      NaN      2016_37   \n",
+       "1          Business        Markham              NaN      NaN      2016_54   \n",
+       "2           Outdoor       Georgina              NaN      NaN     2016_229   \n",
+       "3          Business        Vaughan    Violent Crime      NaN     2016_249   \n",
+       "4         Residence        Vaughan              NaN      NaN     2016_359   \n",
+       "...             ...            ...              ...      ...          ...   \n",
+       "176969    Residence       Georgina              NaN      NaN  2018_390282   \n",
+       "176970    Residence       Georgina              NaN      NaN  2018_390277   \n",
+       "176971    Residence       Georgina              NaN      NaN  2018_390283   \n",
+       "176972     Business        Markham              NaN      NaN  2023_806432   \n",
+       "176973    Residence  Richmond Hill              NaN      NaN  2023_204033   \n",
+       "\n",
+       "        hate_crime case_status                occ_type        date  \n",
+       "0              NaN      Solved      Impaired Operation  2016-01-01  \n",
+       "1              NaN      Solved     Provincial Offences  2016-01-01  \n",
+       "2              NaN      Closed  Theft of Motor Vehicle  2016-01-01  \n",
+       "3       Hate Crime      Solved                Assaults  2016-01-01  \n",
+       "4              NaN      Closed                Mischief  2016-01-01  \n",
+       "...            ...         ...                     ...         ...  \n",
+       "176969         NaN      Closed                   Fraud  2018-11-20  \n",
+       "176970         NaN      Closed                   Fraud  2018-11-20  \n",
+       "176971         NaN      Closed                   Fraud  2018-11-20  \n",
+       "176972         NaN        Open                   Fraud  2020-01-22  \n",
+       "176973         NaN        Open     Other Persons Crime  2018-01-01  \n",
+       "\n",
+       "[176974 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the 'occ_date' column from timestamp format to date\n",
+    "historical_community_safety_data_df['date'] = pd.to_datetime(historical_community_safety_data_df['occ_date']).dt.date\n",
+    "historical_community_safety_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(datetime.date(2021, 1, 1), datetime.date(2016, 1, 1))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "historical_community_safety_data_df['date'].max(), historical_community_safety_data_df['date'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
