update service calls ML

--- a/crime_forecast_ML.ipynb
+++ b/crime_forecast_ML.ipynb
@@ -925,7 +925,7 @@
     }
    ],
    "source": [
-    "query = load_query('query.sql')\n",
+    "query = load_query('crime_forecast_query.sql')\n",
     "feature_df = pysqldf(query)\n",
     "feature_df"
    ]
