Cleanup commented codes

--- a/scheduling_challenge.ipynb
+++ b/scheduling_challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4        12.0       Vacation  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "[28374 rows x 7 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,14 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,20 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_date, end_date = '2022-06-01', '2022-12-31'\n",
-    "total_officer = staffing_df['Officer Badge #'].nunique()\n",
-    "\n",
-    "# staffing_future = staffing_df.loc[(staffing_df['date']>=start_date) & (staffing_df['date']<=get_date_after_n_days(start_date, 30))]\n",
-    "# staffing_future"
+    "total_officer = staffing_df['Officer Badge #'].nunique()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +499,7 @@
        "[1096 rows x 3 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +675,7 @@
        "4           1       2             72                88.774504  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +852,7 @@
        "4           1       2           425              406.442894  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1024,7 @@
        "[214 rows x 5 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1065,7 @@
     "        (df[column+'_rank'] > 0.33) & (df[column+'_rank'] <= 0.66),\n",
     "        (df[column+'_rank'] > 0.66)\n",
     "    ]\n",
-    "    values = ['Low', 'Medium', 'High']\n",
+    "    values = [1, 2, 3]\n",
     "\n",
     "    df[column+'_bucket'] = np.select(conditions, values)\n",
     "\n",
@@ -1084,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1132,9 +1122,9 @@
        "      <td>0.581776</td>\n",
        "      <td>0.985981</td>\n",
        "      <td>0.920561</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1146,9 +1136,9 @@
        "      <td>0.686916</td>\n",
        "      <td>0.948598</td>\n",
        "      <td>0.948598</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1160,9 +1150,9 @@
        "      <td>0.792056</td>\n",
        "      <td>0.523364</td>\n",
        "      <td>0.911215</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>High</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1174,9 +1164,9 @@
        "      <td>0.792056</td>\n",
        "      <td>0.266355</td>\n",
        "      <td>0.429907</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Medium</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1188,9 +1178,9 @@
        "      <td>0.792056</td>\n",
        "      <td>0.084112</td>\n",
        "      <td>0.261682</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1216,9 +1206,9 @@
        "      <td>0.686916</td>\n",
        "      <td>0.009346</td>\n",
        "      <td>0.070093</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>210</th>\n",
@@ -1230,9 +1220,9 @@
        "      <td>0.686916</td>\n",
        "      <td>0.023364</td>\n",
        "      <td>0.098131</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>211</th>\n",
@@ -1244,9 +1234,9 @@
        "      <td>0.401869</td>\n",
        "      <td>0.014019</td>\n",
        "      <td>0.205607</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>212</th>\n",
@@ -1258,9 +1248,9 @@
        "      <td>0.228972</td>\n",
        "      <td>0.004673</td>\n",
        "      <td>0.140187</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Low</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>213</th>\n",
@@ -1272,9 +1262,9 @@
        "      <td>0.401869</td>\n",
        "      <td>0.074766</td>\n",
        "      <td>0.528037</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Medium</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1321,36 +1311,36 @@
        "212                      0.004673                     0.140187   \n",
        "213                      0.074766                     0.528037   \n",
        "\n",
-       "    expected_officers_bucket num_of_crimes_predicted_bucket  \\\n",
-       "0                     Medium                           High   \n",
-       "1                       High                           High   \n",
-       "2                       High                         Medium   \n",
-       "3                       High                            Low   \n",
-       "4                       High                            Low   \n",
-       "..                       ...                            ...   \n",
-       "209                     High                            Low   \n",
-       "210                     High                            Low   \n",
-       "211                   Medium                            Low   \n",
-       "212                      Low                            Low   \n",
-       "213                   Medium                            Low   \n",
+       "     expected_officers_bucket  num_of_crimes_predicted_bucket  \\\n",
+       "0                           2                               3   \n",
+       "1                           3                               3   \n",
+       "2                           3                               2   \n",
+       "3                           3                               1   \n",
+       "4                           3                               1   \n",
+       "..                        ...                             ...   \n",
+       "209                         3                               1   \n",
+       "210                         3                               1   \n",
+       "211                         2                               1   \n",
+       "212                         1                               1   \n",
+       "213                         2                               1   \n",
        "\n",
-       "    num_of_calls_predicted_bucket  \n",
-       "0                            High  \n",
-       "1                            High  \n",
-       "2                            High  \n",
-       "3                          Medium  \n",
-       "4                             Low  \n",
-       "..                            ...  \n",
-       "209                           Low  \n",
-       "210                           Low  \n",
-       "211                           Low  \n",
-       "212                           Low  \n",
-       "213                        Medium  \n",
+       "     num_of_calls_predicted_bucket  \n",
+       "0                                3  \n",
+       "1                                3  \n",
+       "2                                3  \n",
+       "3                                2  \n",
+       "4                                1  \n",
+       "..                             ...  \n",
+       "209                              1  \n",
+       "210                              1  \n",
+       "211                              1  \n",
+       "212                              1  \n",
+       "213                              2  \n",
        "\n",
        "[214 rows x 11 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,6 +1350,15 @@
     "get_rank_bucket(staff_crime_calls_merged, 'num_of_crimes_predicted')\n",
     "get_rank_bucket(staff_crime_calls_merged, 'num_of_calls_predicted')\n",
     "staff_crime_calls_merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# staff_crime_calls_merged.to_csv('Results/staff_crime_calls_merged.csv', index=False)"
    ]
   },
   {
