Commented code cleanup

--- a/crime_forecast_ML.ipynb
+++ b/crime_forecast_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +147,7 @@
        "4      Vaughan         NaN                Mischief  "
       ]
      },
-     "execution_count": 324,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +265,7 @@
        "4      Markham        NaN   Impaired Operation  "
       ]
      },
-     "execution_count": 325,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +383,7 @@
        "175180                 Vaughan        NaN  Other Persons Crime  "
       ]
      },
-     "execution_count": 326,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +589,7 @@
        "[276540 rows x 7 columns]"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +708,7 @@
        "[2739 rows x 2 columns]"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +927,7 @@
        "[2739 rows x 5 columns]"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1095,7 @@
        "[2738 rows x 5 columns]"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1262,7 @@
        "[2738 rows x 5 columns]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1578,7 @@
        "[2738 rows x 12 columns]"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1839,7 @@
        "num_of_crimes             1.000000  "
       ]
      },
-     "execution_count": 336,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1862,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1873,11 +1881,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# features = ['previous_day_crimes', 'last_7_days_crimes', 'last_30_days_crimes', 'dayofweek',\n",
+    "# list of potential features ['previous_day_crimes', 'last_7_days_crimes', 'last_30_days_crimes', 'dayofweek',\n",
     "#        'month', 'dayofmonth', 'weekofyear', 'is_weekend', 'season']\n",
     "features = ['previous_day_crimes', 'last_7_days_crimes', 'last_30_days_crimes', 'dayofweek',\n",
     "       'month', 'dayofmonth', 'weekofyear', 'is_weekend']\n",
@@ -1890,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1947,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1951,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -1962,26 +1970,17 @@
        "                      random_state=12032022)"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from xgboost import XGBRegressor\n",
-    "# model = XGBRegressor(n_estimators=700, learning_rate=0.01)\n",
-    "# model.fit(X_train, \n",
-    "#         y_train,\n",
-    "#         eval_set=[(X_train, y_train), (X_test, y_test)],\n",
-    "#         eval_metric='mae')\n",
-    "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "# Train the model\n",
-    "# model = RandomForestRegressor(n_estimators=1000, max_depth=11)\n",
     "model = RandomForestRegressor(max_features=0.6946169328587748, max_leaf_nodes=8937,\n",
     "                      n_estimators=960, max_depth=11, n_jobs=-1, random_state=12032022)\n",
-    "model.fit(X_train, y_train)\n",
-    "\n"
+    "model.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -1994,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2078,7 @@
        "7           is_weekend    0.008156"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2088,7 @@
     "importances = model.feature_importances_\n",
     "# Create a DataFrame for the feature importance table\n",
     "feature_importance_table = pd.DataFrame({'Feature': X_train.columns, 'Importance': importances})\n",
-    "# Sort the table by feature importance (descending order)\n",
+    "# Sort the table by model's feature importance (descending order)\n",
     "feature_importance_table = feature_importance_table.sort_values(by='Importance', ascending=False)\n",
     "feature_importance_table"
    ]
@@ -2104,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2115,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2172,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -2183,24 +2182,13 @@
        "                      random_state=12032022)"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 346,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RandomForestRegressor() Test RMSE: 17.086254559591584 Test R-Squared: 0.5216493353410171\n",
-    "# RandomForestRegressor(max_depth=10, n_estimators=1000) Test RMSE: 16.941454400917255 Test R-Squared: 0.5297226965628126\n",
-    "# RandomForestRegressor(max_features=0.6946169328587748, max_leaf_nodes=8937, n_estimators=960, n_jobs=-1, random_state=12032022) Test RMSE: 16.814360906030366 Test R-Squared: 0.5367521986020076"
    ]
   },
   {
@@ -2214,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
